webadmin: Fix the too narrow VM interface problem
Add padding to the bottom and top of the network interface
list item to make it bigger.

Bug-Url: https://bugzilla.redhat.com/1552449

--- a/frontend/brands/ovirt-brand/src/main/sass/_webadmin_base.scss
+++ b/frontend/brands/ovirt-brand/src/main/sass/_webadmin_base.scss
@@ -212,8 +212,8 @@ here. Please create new partials when it makes sense.
 }
 
 .network-list-item .list-view-pf-main-info {
-    padding-bottom: 0px;
-    padding-top: 0px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .network-list-item .list-group-item-heading {
